<resources>
    <string name="app_name">PopularMoviesApp</string>
    <string name="action_settings">Settings</string>
    <string name="action_favorites">Favorites</string>
    <string name="authourity">com.udacity.popularmoviesapp</string>
    <string name="sync_account_type">popularmoviesapp.com</string>
    <string name="title_activity_settings">Settings</string>

    <string name="movie_category_mode">Movie Category</string>
    <string name="movie_category_key" translatable="false">movie_category_mode</string>
    <string name="movie_category_mode_default" translatable="false">popular</string>

    <string name="popular_movie_category_label">Popular</string>
    <string name="top_rated_movie_category_label">Top Rated</string>
    <string name="upcoming_movie_category_label">Upcoming</string>

    <string name="popular_movie_category_value">popular</string>
    <string name="top_rated_movie_category_value">top_rated</string>
    <string name="upcoming_movie_category_value">upcoming</string>


    <string name="pref_enable_notifications_label">Movie Notifications</string>
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <string name="notification_content">%1$s New Movies in %2$s Category</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="movie_backdrop_playbutton">Movie Backdrop PlayButton</string>
    <string name="image_poster">Image Poster</string>

    <string name="placeholder_movie_plot">Twenty-two years after the events of Jurassic Park, Isla Nublar now features a fully functioning dinosaur theme park, Jurassic World, as originally envisioned by John Hammond.
        Twenty-two years after the events of Jurassic Park, Isla Nublar now features a fully functioning dinosaur theme park, Jurassic World, as originally envisioned by John Hammond.
    </string>
    <string name="title_activity_favorite">FavoriteActivity</string>

    <string name="mainActivityActivitySelector">ActivitySelector</string>
    <string name="mainActivityFavoriteTitleActionBar"> Favorite Movies</string>

</resources>
