<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <PreferenceCategory
        android:title="Select Movie Category">
        <ListPreference
            android:title="@string/movie_category_mode"
            android:key="@string/movie_category_key"
            android:defaultValue="@string/movie_category_mode_default"
            android:entries="@array/movie_category_modes"
            android:entryValues="@array/movie_category_values"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Notifications">
        <CheckBoxPreference
            android:title="@string/pref_enable_notifications_label"
            android:key="@string/pref_enable_notifications_key"
            android:summaryOff="@string/pref_enable_notifications_false"
            android:summaryOn="@string/pref_enable_notifications_true"
            android:defaultValue="@string/pref_enable_notifications_default" />
    </PreferenceCategory>

</PreferenceScreen>